# A-Two-Phase-Neuro-Guided-Hybrid-GA-ACO-Approach-to-the-University-Course-Timetabling-Problem

./: Baselines_algorithms.ipynb  Feasible-GA.ipynb  Neural-ACO.ipynb  README.md  pyproject.toml
arch/: NeuroOptimizador.py  aco_horarios.py  aco_simple.py  evaluacion_horarios.py  genetic_optimizer.py
data/: Asignaturas.csv  Aulas.csv  Clases.csv  Profesores.csv
myutils/: Data_transform.py  _ga_functions.py  dataloader.py  datos_horarios.py
src/: factible.py  graficar_horarios.py
